[tool.poetry]
name = "paranormal"
version = "0.2.1"
description = "Coherent management of large parameter lists in Python"
authors = ["Schuyler Fried <schuylerfried@gmail.com>", "Steven Heidel <steven@heidel.ca"]
license = "Apache-2.0"
packages = [
    { include = "paranormal" }
]

[tool.poetry.dependencies]
python = ">3.6"
numpy = ">1.18"
PyYAML = ">=5.1"
pampy = ">=0.2.1"

[tool.poetry.dev-dependencies]
pytest = ">=4.4"
mock = ">=3.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
